# research-diff

./: README.md
research-diff/: README.md  pyproject.toml  streamlit_app.py
research-diff/examples/: demo_thread.md
research-diff/fixtures/agent_frameworks/: snapshot_1.json  snapshot_2.json  snapshot_3.json  snapshot_4.json
research-diff/research_diff/: cli.py  client.py  diff.py  digest.py  store.py
research-diff/research_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
research-diff/tests/: test_diff.py
