[project]
name = "research-diff"
version = "0.1.0"
description = "Track a Perplexity query as a persistent, versioned research object and see what changed over time."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
research-diff = "research_diff.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_diff*"]
